--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,9 @@ services:
       - elasticsearch
 
   app-client-apm-nodejs:
-    build:
-      context: app-client-nodejs-apm/
+    image: tonanuvem/app-client-apm-nodejs:latest
+#    build:
+#      context: app-client-nodejs-apm/
     container_name: app-client-apm-nodejs
     ports:
       - 3000:3000
