--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     container_name: apm-server
     ports:
       - 8200:8200
-    volumes:
-      - ./apm-server.yml:/usr/share/apm-server/apm-server.yml
+#    volumes:
+#      - ./apm-server.yml:/usr/share/apm-server/apm-server.yml
     networks:
       - elk
     depends_on:
@@ -64,21 +64,21 @@ services:
     depends_on:
       - elasticsearch
 
-  logstash:
-    image: logstash:6.5.2
-    container_name: logstash
-    volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
-    ports:
-      - "5000:5000"
-      - "9600:9600"
-    environment:
-      - "ES_JAVA_OPTS=-Xmx256m -Xms256m"
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
+#  logstash:
+#    image: logstash:6.5.2
+#    container_name: logstash
+#    volumes:
+#      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+#      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+#    ports:
+#      - "5000:5000"
+#      - "9600:9600"
+#    environment:
+#      - "ES_JAVA_OPTS=-Xmx256m -Xms256m"
+#    networks:
+#      - elk
+#    depends_on:
+#      - elasticsearch
 
 #  logspout:
 #    image: gliderlabs/logspout:latest
